@@ -56,33 +56,41 @@ import java.util.Vector;
 
 public class ImportUnmarshaller extends SaxUnmarshaller
 {
+
     public ImportUnmarshaller
         (Schema schema, AttributeList atts, Resolver resolver, Locator locator)
+		throws SAXException
+    {
+       this(schema, atts, resolver, locator, null);
+    }
+
+    public ImportUnmarshaller
+        (Schema schema, AttributeList atts, Resolver resolver, Locator locator, SchemaUnmarshallerState state)
 		throws SAXException
     {
         super();
         setResolver(resolver);
 
 		//-- Get schemaLocation
-		String schemalocation = atts.getValue("schemaLocation");
-		if (schemalocation==null)
+		String schemaLocation = atts.getValue("schemaLocation");
+		if (schemaLocation==null)
 			throw new SAXException("'schemaLocation' attribute missing on 'import'");
 		//if the path is relative Xerces append the "user.Dir"
         //we need to keep the base directory of the document
         // note: URI not supported (just system path)
-        if (!new java.io.File(schemalocation).isAbsolute()) {
+        if (!new java.io.File(schemaLocation).isAbsolute()) {
              String temp = locator.getSystemId();
              if (temp != null) {
-               if (schemalocation.startsWith("./"))
-                  schemalocation = schemalocation.substring(2);
-               if (schemalocation.startsWith("/"))
-                  schemalocation = schemalocation.substring(1);
+               if (schemaLocation.startsWith("./"))
+                  schemaLocation = schemaLocation.substring(2);
+               if (schemaLocation.startsWith("/"))
+                  schemaLocation = schemaLocation.substring(1);
                 //remove 'file://'
                 temp = temp.substring(7);
                 if (java.io.File.separatorChar =='\\')
                     temp = temp.substring(1);
                 temp = temp.substring(0,temp.lastIndexOf('/')+1);
-                schemalocation = temp + schemalocation;
+                schemaLocation = temp + schemaLocation;
                 temp = null;
              }
         }
@@ -97,21 +105,21 @@ public class ImportUnmarshaller extends SaxUnmarshaller
 			throw new SAXException("namespace '"+namespace+"' not declared in schema");
         if (namespace.equals(schema.getTargetNamespace()) )
             throw new SAXException("the 'namespace' attribute in the <import> element cannot be the same of the targetNamespace of the global schema");
-		//-- Schema object to hold import schema
+		//-- Have we already imported this XML Schema file?
+		if (state.processed(schemaLocation))
+           return;
+        state.markAsProcessed(schemaLocation);
+
+
+        //-- Schema object to hold import schema
 		boolean addSchema = false;
 		Schema importedSchema = schema.getImportedSchema(namespace);
-		if (importedSchema==null)
-		{
+        if (importedSchema == null) {
 			importedSchema = new Schema();
 			addSchema = true;
 		}
 
-		//-- Have we already imported this XML Schema file?
-		if (importedSchema.includeProcessed(schemalocation))
-			return;
-		importedSchema.addInclude(schemalocation);
-
-		//-- Parser Schema
+        //-- Parser Schema
 		Parser parser = null;
 		try {
 		parser = Configuration.getParser();
@@ -123,17 +131,17 @@ public class ImportUnmarshaller extends SaxUnmarshaller
 		else
 		{
 			//-- Create Schema object and setup unmarshaller
-			SchemaUnmarshaller schemaUnmarshaller = new SchemaUnmarshaller();
+			SchemaUnmarshaller schemaUnmarshaller = new SchemaUnmarshaller(state);
 			schemaUnmarshaller.setSchema(importedSchema);
 			parser.setDocumentHandler(schemaUnmarshaller);
 			parser.setErrorHandler(schemaUnmarshaller);
         }
 
 		try {
-		    parser.parse(new InputSource(schemalocation));
+		    parser.parse(new InputSource(schemaLocation));
 		}
 		catch(java.io.IOException ioe) {
-		    throw new SAXException("Error reading import file '"+schemalocation+"': "+ ioe);
+		    throw new SAXException("Error reading import file '"+schemaLocation+"': "+ ioe);
 		}
 
 		//-- Add schema to list of imported schemas (if not already present)
